# aoc-2021

./: Cargo.toml
src/: lib.rs
