[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
priority-queue = "2.1.1"
aoc-utils-crate = { git = "https://github.com/maxwen/aoc-utils-crate" }
regex = "1.11.1"
uuid = { version = "1.13.1", features = ["v4"] }
itertools = "0.14.0"
glam = "0.29.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = false